--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -134,7 +134,7 @@ h3.page-header {
 
 .gambler-sidebar-style .nav>li.active>a {
     background-color: #577181;
-    color: #e0b816;
+    color: #efc105;
 }
 .gambler-sidebar-style .nav>li>a:focus, 
 .gambler-sidebar-style .nav>li>a:hover {
