--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -19,7 +19,7 @@
 						</div>
 						
 	                    <div class="well well-sm" style="margin-bottom: 0; background-color: #2c2b2b7a; border-color: #00000000; border-radius: 154px;">
-	                        <div class="form-horizontal" style="padding-top: 15px; color: #ffd12b;">
+	                        <div class="form-horizontal" style="padding-top: 15px; color: #dfb71d;">
 		                        <div class="form-group">
 									<label class="col-md-4 control-label">Name&nbsp;&nbsp;:</label>
 									<span class="form-control ng-binding" style="background-color: #2c2b2b85; color: #ffd12b; border-radius: 154px; border-color: #ffffff85;">{{ showname }}</span>
