--- a/backend/src/main/webapp/app/views/login.html
+++ b/backend/src/main/webapp/app/views/login.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="login-panel panel panel-default" style="border-color: #d59d37;">
-                <div class="panel-heading" style="background-color: #495f6c; color: #f4bf41; text-align: center; border-color: #ce9c3d;">
+            <div class="login-panel panel panel-default" style="border-color: #6d94ab;">
+                <div class="panel-heading" style="background-color: #495f6c; color: #51c4ea; text-align: center; border-color: #75a0ba;">
                     <h1 class="panel-title" style="font-size: 20px;">Gambler Login</h1>
                 </div>
                 <div class="panel-body" style="background-color: #495f6c; padding: 30px 30px 30px 30px;">
