--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -58,18 +58,17 @@
 						<div class="form-group input-group input-group-sm">
 							<span class="input-group-addon">งวดที่</span>
 							<select class="form-control" ng-model="formData.period" ng-options="option._id as option.periodDateTime | date:'dd/MM/yyyy' for option in periods" ng-change="changePeriod()"></select>
-						</div>
-						<div class="form-group input-group input-group-sm">
-							<span class="input-group-addon">ชื่อผู้ซื้อ</span> <select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
+							
+							<span class="input-group-addon">ชื่อผู้ซื้อ</span> 
+							<select class="form-control" ng-model="formData.orderName" ng-options="option for option in orderNameLst" ng-change="changeOrderName()">
 								<option value="">--ทั้งหมด--</option>
 							</select>
-						</div>
-						<div class="form-group input-group input-group-sm">
-							<span class="input-group-addon">ประเภท</span> <select class="form-control" ng-model="formData.orderType" ng-options="option.id as option.name for option in orderType"
+							
+							<span class="input-group-addon">ประเภท</span> 
+							<select class="form-control" ng-model="formData.orderType" ng-options="option.id as option.name for option in orderType"
 								ng-change="changeTab(formData.orderType)">
 							</select>
-						</div>
-						<div class="form-group input-group input-group-sm">
+							
 							<span class="input-group-addon">ค้นหา</span>
 							<input type="text" class="form-control" placeholder="เลขที่ซื้อ" ng-model="formData.orderNumber" />
 						</div>
