--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -11,22 +11,22 @@
 			<div class="panel gambler-panel" style="background-color: #4186b7;">
 					<div class="panel-heading" style="text-align: center; background-color: #2c2b2bc7;">
                     	<img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" ng-show="photoSource" 
-							     style="height: 40px; background-color: #ffffff00; border-color: #c5a611; border-radius: 22px;">
+							     style="height: 40px; background-color: #ffffff00; border-color: #4186b7; border-radius: 22px;">
                     </div>
                        <div class="panel-body" style="background-color: #0c0c0c36; border-radius: 154px; margin: 1px;">
                        	<div style="text-align: center; margin: 5px 0 25px 0;">							     
-						     <h3 style="color: #ffd12b; text-shadow: 2px 2px #000000;">{{ workingOnDealer.id ? workingOnDealer.name : "&nbsp;" }}</h3>
+						     <h3 style="color: #65bdfb; text-shadow: 2px 2px #000000;">{{ workingOnDealer.id ? workingOnDealer.name : "&nbsp;" }}</h3>
 						</div>
 						
 	                    <div class="well well-sm" style="margin-bottom: 0; background-color: #2c2b2b7a; border-color: #00000000; border-radius: 154px;">
-	                        <div class="form-horizontal" style="padding-top: 15px; color: #dfb71d;">
+	                        <div class="form-horizontal" style="padding-top: 15px; color: #4899d3;">
 		                        <div class="form-group">
 									<label class="col-md-4 control-label">Name&nbsp;&nbsp;:</label>
-									<span class="form-control ng-binding" style="background-color: #2c2b2b85; color: #ffd12b; border-radius: 154px; border-color: #ffffff85;">{{ showname }}</span>
+									<span class="form-control ng-binding" style="background-color: #2c2b2b85; color: #5ba6db; border-radius: 154px; border-color: #ffffff85;">{{ showname }}</span>
 								</div>
 								<div class="form-group">
 									<label class="col-md-4 control-label">Role&nbsp;&nbsp;:</label>
-									<span class="form-control ng-binding" style="background-color: #2c2b2b85; color: #ffd12b; border-radius: 154px; border-color: #ffffff85;">{{ position }}</span>
+									<span class="form-control ng-binding" style="background-color: #2c2b2b85; color: #5ba6db; border-radius: 154px; border-color: #ffffff85;">{{ position }}</span>
 								</div>
 	                        </div>
 	                    </div>
