--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -35,7 +35,7 @@
 							</tr>
 					    </tbody>
 					</table>
-					<button type="button" class="btn btn-success btn-circle pull-right" ng-click="addEdit()"><i class="fa fa-plus"></i></button>
+					<button type="button" class="btn btn-info btn-circle pull-right" ng-click="addEdit()"><i class="fa fa-plus"></i></button>
                 </div>
             </div>
         </div>
@@ -102,8 +102,8 @@
 				</div>
             </div>
            	<div class="modal-footer">
-				<button type="button" class="btn btn-default" ng-click="dismissModal()">Close</button>
-				<button type="button" class="btn btn-primary" ng-click="persist()">Save</button>
+				<button type="button" class="btn btn-outline btn-default" ng-click="dismissModal()">Close</button>
+				<button type="button" class="btn btn-outline btn-info" ng-click="persist()">Save</button>
 			</div>
          </div>
      </div>
