--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -49,7 +49,10 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h3 class="page-header"><i class="fa fa-book fa-fw"></i> บันทึกข้อมูล</h3>
+			<h3 class="page-header">
+				<span class="pull-left">{{ showname }}</span>
+				<i class="fa fa-book fa-fw"></i> บันทึกข้อมูล
+			</h3>
 		</div>
 	</div>
 	            
