--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -46,7 +46,10 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h3 class="page-header"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล</h3>
+			<h3 class="page-header">
+				<span class="pull-left">{{ showname }}</span>
+				<i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล
+			</h3>
 		</div>
 	</div>
 	                
