--- a/backend/src/main/webapp/app/views/receiver/main.html
+++ b/backend/src/main/webapp/app/views/receiver/main.html
@@ -13,7 +13,10 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h3 class="page-header"><i class="fa fa-building-o fa-fw"></i> ผู้รับ</h3>
+			<h3 class="page-header">
+				<span class="pull-left">{{ showname }}</span>
+				<i class="fa fa-building-o fa-fw"></i> ผู้รับ
+			</h3>
 		</div>
 	</div>
 	                
