--- a/backend/src/main/webapp/app/views/user/main.html
+++ b/backend/src/main/webapp/app/views/user/main.html
@@ -1,7 +1,10 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h3 class="page-header"><i class="fa fa-users fa-fw"></i> Users</h3>
+			<h3 class="page-header">
+				<span class="pull-left">{{ showname }}</span>
+				<i class="fa fa-users fa-fw"></i> Users
+			</h3>
 		</div>
 	</div>
 	
