--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -118,7 +118,7 @@
 			<!-- <div class="tab-pane fade fixedheader" id="home-pills" ng-class="{'active in': tabActived == 1}"> -->
 			<div class="tab-pane fade fixedheader" id="home-pills" ng-class="{'active in': tabActived == 1 || tabActived == 2 || tabActived == 3 ||
 											                     							tabActived == 4 || tabActived == 41 || tabActived == 42 || 
-											                     							tabActived == 43 || tabActived == 44 || tabActived == 5}">
+											                     							tabActived == 43 || tabActived == 44 || tabActived == 5 || tabActived == 51}">
 											                     							
 				<table class="table table-hover result-panel table-fixed gambler-panel">
 					<thead>
@@ -139,7 +139,9 @@
 					</tbody>
 				</table>
 				<div>
-					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
+					<span class="pull-right" style="font-weight: 700;" ng-hide="tabActived == 51">
+						รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp;
+					</span>
 				</div>
 			</div>
 			
