--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -298,7 +298,7 @@
 											    <tbody id="orderDataInput" class="disable-select">
 											     	<tr ng-repeat="ord in orderData | filter:{'orderNumber': formData.orderNumberSearch}:comparator" ng-dblclick="isDnDable ? '' : updateDell(ord)">
 														<td style="width: 12%">{{ $index + 1 }})</td>
-														<td style="width: 20%">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
+														<td style="width: 20%">{{ ord.createdDateTime | date:'dd HH:mm' }}</td>
 														<td style="width: 25%">{{ ord.name }}</td>
 														<td style="width: 28%">{{ ord.symBol }}</td>
 														<td style="width: 15%">{{ ord.note || '&nbsp;' }}</td>
