--- a/backend/src/main/webapp/app/views/receiver/main.html
+++ b/backend/src/main/webapp/app/views/receiver/main.html
@@ -71,102 +71,17 @@
 								    <input type="text" tabindex="2" class="form-control input-sm" ng-model="receiver.formData.senderName">
 								</div>	                			
 	                		</div>
+	                		<div class="col-md-6">
+	                			<div class="form-group">
+								    <label>ราคา</label>
+	                				<select class="form-control" ng-model="receiver.formData.priceListId" ng-options="option.id as option.priceListName for option in priceList.list"></select>
+	                			</div>
+	                		</div>
                 		</div>
-                		
-                		<fieldset>
-                			<legend class="legend-style" ng-click="receiver.chageField()">{{ receiver.fieldIndex == 0 ? 'ราคา' : 'เปอร์เซ็น' }} (ส่ง)</legend>
-	                		
-	                		<div class="row">
-	                			<div class="col-md-6">
-									<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group1 }}</label>
-										<div class="input-group input-group-sm">
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldBon3">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldBon2">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldLang2">
-										</div>
-									</div>
-		                		</div>
-		                		
-		                		<div class="col-md-6">
-									<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group2 }}</label>
-										<div class="input-group input-group-sm">
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldLoy1">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldLoy4">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.pass[receiver.fieldIndex].fieldLoy5">
-										</div>
-									</div>
-		                		</div>
-	                		</div>
-	                		<div class="row">
-		                		<div class="col-md-6">
-			                		<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group3 }}</label>
-									    <input type="text" tabindex="2" class="form-control input-sm" 
-									    ng-model="receiver.pass[receiver.fieldIndex].fieldTod">
-									</div>	                			
-		                		</div>
-	                		</div>
-                		</fieldset>
-                		
-                		<fieldset>
-                			<legend class="legend-style" ng-click="receiver.chageField()">{{ receiver.fieldIndex == 0 ? 'ราคา' : 'เปอร์เซ็น' }} (ขาย)</legend>
-	                		<div class="row">
-	                			<div class="col-md-6">
-									<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group1 }}</label>
-										<div class="input-group input-group-sm">
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldBon3">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldBon2">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldLang2">
-										</div>
-									</div>
-		                		</div>
-		                		<div class="col-md-6">
-									<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group2 }}</label>
-										<div class="input-group input-group-sm">
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldLoy1">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldLoy4">
-										  <span class="input-group-addon" id="sizing-addon3">/</span>
-										  <input type="text" tabindex="2" class="form-control" 
-									   	  ng-model="receiver.sale[receiver.fieldIndex].fieldLoy5">
-										</div>
-									</div>
-		                		</div>
-		                		<div class="col-md-6">
-			                		<div class="form-group">
-									    <label>{{ receiver.label[receiver.fieldIndex].group3 }}</label>
-									    <input type="text" tabindex="2" class="form-control input-sm" 
-									    ng-model="receiver.sale[receiver.fieldIndex].fieldTod"
-									    placeholder="{{ receiver.sale[receiver.fieldIndex].fieldTod.label }}">
-									</div>	                			
-		                		</div>
-	                		</div>
-                		</fieldset>
                 		
                 		<div class="pull-right">
 	                		<button type="button" tabindex="6" class="btn btn-outline btn-default btn-sm" ng-click="receiver.addEditPanel = 0">ปิด</button>
-	                		<button type="button" tabindex="6" class="btn btn-outline btn-info btn-sm" ng-click="receiver.saveUpdateReceiver()">บันทึก</button>
+	                		<button type="button" tabindex="6" class="btn btn-outline btn-info btn-sm" ng-disabled="!receiver.formData.priceListId || !receiver.formData.receiverName" ng-click="receiver.saveUpdateReceiver()">บันทึก</button>
                 		</div>
                 		
 					</form>
