--- a/backend/src/main/webapp/app/views/priceList/main.html
+++ b/backend/src/main/webapp/app/views/priceList/main.html
@@ -15,15 +15,15 @@
 		<div class="col-md-12">
 			<h3 class="page-header">
 				<span class="pull-left">{{ showname }}</span>
-				<i class="fa fa-money fa-fw"></i> Price List
+				<i class="fa fa-money fa-fw"></i> ราคา
 			</h3>
 		</div>
 	</div>
 	                
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-8">
 			<div class="panel gambler-panel">
-                <div class="panel-heading">Price List</div>
+                <div class="panel-heading">ข้อมูลราคา</div>
                 <div class="panel-body">
             		<table class="table table-hover gambler-panel" id="tbSortable">
 					    <thead>
@@ -50,18 +50,18 @@
 			</div>
 		</div>
 		
-		<div class="col-md-6" ng-hide="priceList.addEditPanel == 0">
-			<div class="panel panel-info">
+		<div class="col-md-4" ng-hide="priceList.addEditPanel == 0">
+			<div class="panel gambler-panel">
                 <div class="panel-body">
                 
-				    <div style="text-align: center; font-weight: 700;">{{ priceList.addEditPanel == 1 ? 'เพิ่ม' : 'แก้ไข' }} Price List</div>
+				    <div style="text-align: center; font-weight: 700;">{{ priceList.addEditPanel == 1 ? 'เพิ่ม' : 'แก้ไข' }} ราคา</div>
                 	<hr style="border: 2px solid #5bc0de; margin-top: 5px;" />
                 	
                 	<form>
                 		<div class="row">
 	                		<div class="col-md-12">
 		                		<div class="form-group">
-								    <label>ชื่อ Price List</label>
+								    <label>ชื่อ ราคา</label>
 								    <input type="text" tabindex="2" class="form-control input-sm" ng-model="priceList.formData.priceListName">
 								</div>	                			
 	                		</div>
@@ -70,7 +70,7 @@
                 		<fieldset>
                 			<legend class="legend-style" ng-click="priceList.chageField()">{{ priceList.fieldIndex == 0 ? 'ราคา' : 'เปอร์เซ็น' }}</legend>
 	                		<div class="row">
-	                			<div class="col-md-6">
+	                			<div class="col-md-12">
 									<div class="form-group">
 									    <label>{{ priceList.label[priceList.fieldIndex].group1 }}</label>
 										<div class="input-group input-group-sm">
@@ -85,7 +85,7 @@
 										</div>
 									</div>
 		                		</div>
-		                		<div class="col-md-6">
+		                		<div class="col-md-12">
 			                		<div class="form-group">
 									    <label>{{ priceList.label[priceList.fieldIndex].group3 }}</label>
 									    <input type="text" tabindex="2" class="form-control input-sm" 
@@ -93,7 +93,7 @@
 									    placeholder="{{ priceList.sale[priceList.fieldIndex].fieldTod.label }}">
 									</div>	                			
 		                		</div>
-		                		<div class="col-md-6">
+		                		<div class="col-md-12">
 									<div class="form-group">
 									    <label>{{ priceList.label[priceList.fieldIndex].group2 }}</label>
 										<div class="input-group input-group-sm">
@@ -108,7 +108,7 @@
 										</div>
 									</div>
 		                		</div>
-		                		<div class="col-md-6">
+		                		<div class="col-md-12">
 									<div class="form-group">
 									    <label>{{ priceList.label[priceList.fieldIndex].group4 }}</label>
 										<div class="input-group input-group-sm">
