--- a/backend/src/main/webapp/app/views/lottoResult/main.html
+++ b/backend/src/main/webapp/app/views/lottoResult/main.html
@@ -1,6 +1,6 @@
 <style>
 tbody > tr > td > span {
-	background-color: #5cb85c !important;
+	/* background-color: #5cb85c !important; */
 	color: black !important;
 }
 </style>
@@ -46,21 +46,21 @@ tbody > tr > td > span {
 								<th>ผู้รับ</th>
 							</tr>
 					    </thead>
-						<tbody ng-repeat="lst in lottoResult">
+						<tbody ng-repeat="lst in lottoResult" ng-init="dymColor = colors[$index % 4];">
 					     	<tr ng-repeat="res in lst.result">
-								<td>{{ $index + 1 }}</td>
-								<td>{{ res.name }}</td>
-								<td><span class="badge">{{ res.result3_price }}</span></td>
-								<td><span class="badge">{{ res.resultTod_todPrice }}</span></td>
-								<td><span class="badge">{{ res.resultBon2_price }}</span></td>
-								<td><span class="badge">{{ res.resultLang2_price }}</span></td>
-								<td><span class="badge">{{ res.loy_price }}</span></td>
-								<td><span class="badge">{{ res.pair4_price }}</span></td>
-								<td><span class="badge">{{ res.pair5_price }}</span></td>
-								<td><span class="badge">{{ res.runBon_price }}</span></td>
-								<td><span class="badge">{{ res.runLang_price }}</span></td>
-								<td>{{ res.user }}</td>
-								<td>{{ res.receiverName }}</td>
+								<td ng-style="{'color': dymColor}">{{ $index + 1 }} {{ modVal }}</td>
+								<td ng-style="{'color': dymColor}">{{ res.name }}</td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.result3_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultTod_todPrice }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultBon2_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultLang2_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.loy_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair4_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair5_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runBon_price }}</span></td>
+								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runLang_price }}</span></td>
+								<td ng-style="{'color': dymColor}">{{ res.user }}</td>
+								<td ng-style="{'color': dymColor}">{{ res.receiverName }}</td>
 							</tr>
 					    </tbody>
 					</table>
