--- a/backend/src/main/webapp/app/views/lottoResult/main.html
+++ b/backend/src/main/webapp/app/views/lottoResult/main.html
@@ -1,7 +1,9 @@
 <style>
 tbody > tr > td > span {
-	/* background-color: #5cb85c !important; */
 	color: black !important;
+}
+thead > tr > th, tbody > tr > td {
+	white-space:nowrap;
 }
 </style>
 <div>
@@ -27,44 +29,44 @@ tbody > tr > td > span {
 							<span class="badge" style="background-color: #5cb85c; color: black;">เลข 2 ตัวล่าง : {{ formData.result2 }}</span>
 						</span>
 				    </div>
-                
-            		<table class="table table-hover gambler-panel">
-					    <thead>
-							<tr>
-								<th>#</th>
-								<th>ชื่อ</th>
-								<th>3 ตัวบน</th>
-								<th>3 ตัวโต๊ด</th>
-								<th>2 ตัวบน</th>
-								<th>2 ตัวล่าง</th>
-								<th>ลอย</th>
-								<th>แพ 4</th>
-								<th>แพ 5</th>
-								<th>วิ่งบน</th>
-								<th>วิ่งล่าง</th>
-								<th>ผู้บันทึก</th>
-								<th>ผู้รับ</th>
-							</tr>
-					    </thead>
-						<tbody ng-repeat="lst in lottoResult" ng-init="dymColor = colors[$index % 4];">
-					     	<tr ng-repeat="res in lst.result">
-								<td ng-style="{'color': dymColor}">{{ $index + 1 }} {{ modVal }}</td>
-								<td ng-style="{'color': dymColor}">{{ res.name }}</td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.result3_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultTod_todPrice }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultBon2_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultLang2_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.loy_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair4_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair5_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runBon_price }}</span></td>
-								<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runLang_price }}</span></td>
-								<td ng-style="{'color': dymColor}">{{ res.user }}</td>
-								<td ng-style="{'color': dymColor}">{{ res.receiverName }}</td>
-							</tr>
-					    </tbody>
-					</table>
-					<button type="button" class="btn btn-info btn-circle pull-right" ng-click="receiver.addEditReceiver(1)"><i class="fa fa-plus"></i></button>
+                	<div style="overflow: auto;">
+	            		<table class="table table-hover gambler-panel">
+						    <thead>
+								<tr>
+									<th>#</th>
+									<th>ชื่อ</th>
+									<th>3 ตัวบน</th>
+									<th>3 ตัวโต๊ด</th>
+									<th>2 ตัวบน</th>
+									<th>2 ตัวล่าง</th>
+									<th>ลอย</th>
+									<th>แพ 4</th>
+									<th>แพ 5</th>
+									<th>วิ่งบน</th>
+									<th>วิ่งล่าง</th>
+									<th>ผู้บันทึก</th>
+									<th>ผู้รับ</th>
+								</tr>
+						    </thead>
+							<tbody ng-repeat="lst in lottoResult" ng-init="dymColor = colors[$index % 4];">
+						     	<tr ng-repeat="res in lst.result">
+									<td ng-style="{'color': dymColor}">{{ $index + 1 }} {{ modVal }}</td>
+									<td ng-style="{'color': dymColor}">{{ res.name }}</td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.result3_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultTod_todPrice }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultBon2_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.resultLang2_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.loy_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair4_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.pair5_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runBon_price }}</span></td>
+									<td><span class="badge" ng-style="{'background-color': dymColor}">{{ res.runLang_price }}</span></td>
+									<td ng-style="{'color': dymColor}">{{ res.user }}</td>
+									<td ng-style="{'color': dymColor}">{{ res.receiverName }}</td>
+								</tr>
+						    </tbody>
+						</table>
+					</div>
                 </div>
 			</div>
 		</div>
