--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -81,14 +81,15 @@
 						<div ng-class="{'col-md-12': receiverList.length == 1, 'col-md-6': receiverList.length > 1}" ng-repeat="rc in receiverList">
 							<div style="margin-bottom: 5px; margin-top: 10px; background-color: #2C2B2B; border-radius: 5px; padding: 5px; border: .5px solid #ffffffa6;">
 								<span class="badge" style="background-color: #337ab7; font-size: 16px; 
-															padding: 5px 20px 5px 20px; border-radius: 13px; text-shadow: 1px 1px black;">
+															padding: 5px 20px 5px 20px; border-radius: 13px; text-shadow: 1px 1px black;" 
+															ng-style="rc.isCuttingOff ? {'background-color': 'rgb(150 78 78)'} : {'background-color': '#337ab7'}">
 								{{ rc.receiverName }}
 								</span>
 								<span style="margin-right: 5px; color: black; cursor: pointer;" class="label label-info" ng-repeat="rcIna in receiverInactiveList" ng-click="changeReceiver(rcIna, $parent.$index)">{{ rcIna.receiverName }}</span>
 							</div>
 							<div ng-include="'./views/manageOrder/orderGroup.html'"></div>
 							
-							<div ng-class="{'pull-right': $index == 0}" ng-hide="isDnDable || formData.orderType == 0 || formData.orderType == 5 || formData.orderType == 6">
+							<div ng-class="{'pull-right': $index == 0}" ng-hide="isDnDable || formData.orderType == 0 || formData.orderType == 5 || formData.orderType == 6 || isCuttingOff">
 								<i class="fa fa-2x" ng-class="{'fa-share': $index == 0, 'fa-reply': $index == 1}" style="color: #337ab7; cursor: pointer;" 
 								title="ย้ายข้อมูลการซื้อ"
 								ng-click="moveOrder($index)"></i>
