--- a/backend/src/main/webapp/liff/liff.css
+++ b/backend/src/main/webapp/liff/liff.css
@@ -131,7 +131,7 @@ ul#keys-freebie>li>span {
 }
 #lps-overlay {
   position: absolute; /* Sit on top of the page content */
-  display: none;  /* Hidden by default */
+  display: block;  /* Hidden by default */
   width: 100%; /* Full width (cover the whole page) */
   height: 100%; /* Full height (cover the whole page) */
   top: 0;
