--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -10,83 +10,46 @@
 				
 			<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 0}">
 				<div class="form-group input-group pull-right" style="z-index: 1000; margin: 0;">
-					<i class="fa fa-download fa-2x" style="cursor: pointer; color: #2071b6; margin: 5px 5px 0 0;" title="Download" ng-click="exportOrder(rc.id)"></i>
+					<i class="fa fa-download fa-2x" style="cursor: pointer; color: #de952e; margin: 5px 5px 0 0;" title="Export" ng-click="exportOrder(rc.id)"></i>
+				</div>	
+				<div style="min-height: 465px;">
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th style="width: 30%; text-align: right;">ประเถท</th>
+								<th style="width: 70%">ราคา</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="ech in eachPrice[rc.id]">
+								<td style="text-align: right;">{{ ech.title }}</td>
+								<td>{{ ech.price | number:2 }}</td>
+							</tr>
+							<tr style="font-weight: 700;">
+								<td style="text-align: right;">ยอดซื้อทั้งหมด</td>
+								<td>
+									<span>{{ totalPriceSum[rc.id] | number:2 }}</span>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-				<div class="form-horizontal" style="margin-bottom: 5px; border-radius: 5px; background-color: #2C2B2B; padding-bottom: 5px; padding-left: 10px; border: .5px solid #ffffffa6;">
-					<div class="checkbox">
-						<label>
-					      <input type="checkbox" ng-model="chkbox.checkBoxTypeAll" ng-true-value="true" ng-false-value="false" ng-change="checkBoxTypeAllFn()"> All
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.bon3" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 3 บน
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.bon2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 บน
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.lang2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 ล่าง
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.loy" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> ลอย
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.pair4" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> แพ 4
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.pair5" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> แพ 5
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.runBon" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> วิ่งบน
-					    </label>&nbsp;&nbsp;&nbsp;
-					    <label>
-					      <input type="checkbox" ng-model="checkBoxType.runLang" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> วิ่งล่าง
-					    </label>
-					</div>
-				</div>
-				
-				<table class="table table-hover result-panel table-fixed gambler-panel">
-					<thead>
-						<tr>
-							<th style="width: 8%">#</th>
-							<th style="width: 19%">วันที่</th>
-							<th style="width: 27%">ชื่อ</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 16%">หมายเหตุ</th>
-						</tr>
-					</thead>
-					
-					<tbody id="orderDataInput"
-							dnd-list="orderData[rc.id]"
-							dnd-disable-if="isDnDable || isCuttingOff"
-							dnd-drop="dropCallback(index, item, external, type, rc.id)">
-						<tr ng-repeat="ord in orderData[rc.id] | filter:{'orderNumber': formData.orderNumber}:comparator"
-							dnd-draggable="ord"
-							dnd-moved="orderData[rc.id].splice($index, 1)" 
-							dnd-effect-allowed="move">
-					
-							<td style="width: 8%;">{{ $index + 1 }})</td>
-							<td style="width: 19%;">{{ ord.createdDateTime | date:'dd HH:mm' }}</td>
-							<td style="width: 27%;">{{ ord.name }}</td>
-							<td style="width: 30%;">{{ ord.symBol }}</td>
-							<td style="width: 16%;">{{ ord.note || '&nbsp;' }}</td>
-						</tr>
-					</tbody>
-				</table>
 
 				<div style="font-weight: 700;">
+					<!-- <div>
+						<span>ยอดซื้อทั้งหมด {{ totalPriceSum[rc.id] | number:2 }}</span>
+					</div> -->
 					<div>
-						<span>ยอดซื้อทั้งหมด {{ formData.orderName ? '(' + formData.orderName + ')' : '' }} : </span> <span>{{ totalPriceSumAll[rc.id] | number:2 }}</span>
-					</div>
-					<div>
-						<span style="float: left;">หลังส่วนลด&nbsp;</span> <select class="form-control input-sm" style="width: 100px; float: left;" ng-model="formData.discount" ng-change="changePercent()">
+						<!-- <span style="float: left;">หลังส่วนลด&nbsp;</span> <select class="form-control input-sm" style="width: 100px; float: left;" ng-model="formData.discount" ng-change="changePercent()">
 							<option value="10">10%</option>
 							<option value="15">15%</option>
 							<option value="20">20%</option>
 							<option value="25">25%</option>
 							<option value="30">30%</option>
-						</select> &nbsp;: <span>{{ (totalPriceSumAll[rc.id] - ((formData.discount/100) * totalPriceSumAll[rc.id])) | number:2 }}</span>
+						</select> &nbsp;: <span>{{ (totalPriceSum[rc.id] - ((formData.discount/100) * totalPriceSum[rc.id])) | number:2 }}</span> -->
+						
 						<i class="fa pull-right" title="ตั้งค่าเลขปิด" style="cursor: pointer;" ng-class="{'fa-sort-asc': restricted.isSettingShow, 'fa-sort-desc': !restricted.isSettingShow}" 
-						ng-click="restricted.isSettingShow = restricted.isSettingShow ? false : true;"></i>
+						   ng-click="restricted.isSettingShow = restricted.isSettingShow ? false : true;"></i>
 					</div>
 				</div>
 				<div class="row animate__animated" style="margin-top: 20px; padding-left: 5px; padding-right: 5px;" 
@@ -122,23 +85,21 @@
 				<table class="table table-hover result-panel table-fixed gambler-panel">
 					<thead>
 						<tr>
-							<th style="width: 15%">#</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 35%">ราคารวม</th>
-							<th style="width: 20%">จำนวน</th>
+							<th style="width: 20%">#</th>
+							<th style="width: 40%">เลขที่ซื้อ</th>
+							<th style="width: 40%">ราคารวม</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="ord in orderData[rc.id] | filter:{'_id': formData.orderNumber}:comparator">
-							<td style="width: 15%">{{ $index + 1 }})</td>
-							<td style="width: 30%">{{ ord._id }}</td>
-							<td style="width: 35%">{{ ord.totalPrice | number:2}}</td>
-							<td style="width: 20%">{{ ord.count | number:0 }}</td>
+							<td style="width: 20%">{{ $index + 1 }})</td>
+							<td style="width: 40%">{{ ord.orderNumber }}</td>
+							<td style="width: 40%">{{ ord.price | number:2}}</td>
 						</tr>
 					</tbody>
 				</table>
 				<div>
-					<span class="pull-right" style="font-weight: 700;" ng-hide="tabActived == 51">
+					<span class="pull-right" style="font-weight: 700;">
 						รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp;
 					</span>
 				</div>
