--- a/backend/src/main/webapp/app/views/manageOrder/bak/moveCondition.html
+++ b/backend/src/main/webapp/app/views/manageOrder/bak/moveCondition.html
@@ -16,15 +16,17 @@
 			<select class="form-control" ng-model="moveOrderData.operator" ng-options="option.id as option.name for option in moveOrderData.operators">
 			</select>
 			<span class="input-group-addon"></span>
-			<input type="number" class="form-control input-sm" placeholder="ราคา" ng-model="moveOrderData.price" ng-disabled="moveOrderData.operator == 3">
+			<select class="form-control" ng-model="moveOrderData.price" ng-options="option for option in moveOrderData.prices"
+				ng-disabled="moveOrderData.operator == 3">
+			</select>
 			<span class="input-group-addon">บาท</span>
 		</div>
-		<!-- <div>
+		<div>
 			<div class="checkbox" ng-show="formData.orderType == 1">
 				<label>
 			      <input type="checkbox" ng-model="moveOrderData.isIncludeTod" ng-true-value="true" ng-false-value="false"> รวมโต๊ดด้วย
 			    </label>
 		    </div>
-		</div> -->
+		</div>
    </div>
 </div>
