--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -147,7 +147,7 @@
 										</div>
 										
 										<button type="submit" tabindex="6" class="btn btn-outline btn-info pull-right" ng-click="saveOrder()"
-											ng-disabled="!(formData.name && formData.orderNumber && (formData.bon || formData.lang || formData.loy ||
+											ng-disabled="!(formData.name && formData.orderNumber && (formData.bon || formData.tod || formData.lang || formData.loy ||
 											formData.runBon || formData.runLang ))">บันทึก</button>
 										
 										</fieldset>
