--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -70,7 +70,7 @@
 							<span class="input-group-addon">ค้นหา</span>
 							<input type="text" class="form-control" placeholder="เลขที่ซื้อ" ng-model="formData.orderNumber" />
 						</div>
-						<button type="button" class="btn btn-warning pull-right btn-sm" style="color: black;" ng-click="proceed()">ประมวลผลใหม่</button>
+						<!-- <button type="button" class="btn btn-warning pull-right btn-sm" style="color: black;" ng-click="proceed()">ประมวลผลใหม่</button> -->
 					</form>
 					
 					<div class="row">
