--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -49,22 +49,7 @@
 					                    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" date-parser="dd/MM/yyyy HH:mm" />
 									  </div>
 									  
-									  <!-- <div class="form-group input-group">
-									  	<span class="input-group-addon">Hold</span>
-									  	<select name="isHold" class="form-control" ng-model="formData.isHold" ng-options="option.status as option.text for option in holdSelectLst" ng-change="search()">
-											<option value="">--ทั้งหมด--</option>
-								  		</select>
-									  </div> -->
-									  
-									  
 									  <div class="pull-right" ng-show="group2 || group5">
-									  
-									  	  <!-- Notice -->
-									  	  <!-- <span class="pull-right" ng-show="isDisableNoticePrint && group1">
-				                           	&nbsp;|
-										    <button type="button" class="btn btn-outline btn-primary" ng-click="exportNotices()">Print Notice</button>
-				                          </span> -->
-				                          
 									  	  <div class="dropdown pull-right">
 										      <button class="btn btn-outline btn-primary" type="button" data-toggle="dropdown" data-submenu="">
 										        <i class="fa fa-download"></i> Export <span class="caret"></span>
@@ -73,12 +58,12 @@
 										      <ul class="dropdown-menu dropdown-menu-right">
 										      	 <li ng-show="uploadTemplates.length == 1">
 										      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, 1, true)">
-										      			<i class="fa fa-file-excel-o"></i> รายการล่าสุด
+										      			<i class="fa fa-file-excel-o fw"></i> รายการล่าสุด
 										      		</a>
 										      	 </li>
 										      
 												  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
-													  <a tabindex="0"><i class="fa fa-file-excel-o"></i> รายการล่าสุด</a>
+													  <a tabindex="0"><i class="fa fa-file-excel-o fw"></i> รายการล่าสุด</a>
 													  
 													  <ul class="dropdown-menu">
 													  	<li ng-repeat="u in uploadTemplates">
@@ -89,11 +74,11 @@
 												  
 												  <li ng-show="uploadTemplates.length == 1">
 										      		<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, 1, false)">
-										      			<i class="fa fa-file-excel-o"></i> ทั้งหมด
+										      			<i class="fa fa-file-excel-o fw"></i> ทั้งหมด
 										      		</a>
 										      	  </li>
 												  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
-												  	  <a tabindex="0"><i class="fa fa-file-excel-o"></i> ทั้งหมด</a>
+												  	  <a tabindex="0"><i class="fa fa-file-excel-o fw"></i> ทั้งหมด</a>
 												  	  
 												  	  <ul class="dropdown-menu">
 												  	  	<li ng-repeat="u in uploadTemplates">
@@ -105,11 +90,11 @@
 												  <li class="divider">
 												  <li ng-show="uploadTemplates.length == 1">
 												  	<a tabindex="0" href="" ng-click="exportResult(uploadTemplates[0].id, 1, true, true)">
-										      			<i class="fa fa-file-excel-o"></i> ขาดการติดตาม
+										      			<i class="fa fa-file-excel-o fw"></i> ขาดการติดตาม
 										      		</a>
 										      	  </li>
 												  <li class="dropdown-submenu" style="cursor: default;" ng-show="uploadTemplates.length > 1">
-													  <a tabindex="0"><i class="fa fa-file-excel-o"></i> ขาดการติดตาม</a>
+													  <a tabindex="0"><i class="fa fa-file-excel-o fw"></i> ขาดการติดตาม</a>
 													  
 													  <ul class="dropdown-menu">
 													    <li ng-repeat="u in uploadTemplates">
@@ -117,6 +102,13 @@
 													    </li>
 													  </ul>
 												  </li>
+												 <!--  <li class="divider">
+												  <li ng-show="uploadTemplates.length == 1">
+												  	<a href="" ng-click="upload()">
+										      			<i class="fa fa-cloud-upload fw"></i> Upload
+										      		</a>
+										      	  </li> -->
+												  
 											  </ul>
 										  </div>
 											 
