--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -96,6 +96,17 @@
 	            <input type="radio" name="userEditable" value="0" ng-checked="data.userEditable == 0" ng-model="data.userEditable">No
 	        </label>
        </div>
+       
+       <div class="form-group" ng-show="group0">
+	        <label>User Track Editable &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="userTraceEditable" value="1" ng-checked="data.userTraceEditable == 1" ng-model="data.userTraceEditable">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="userTraceEditable" value="0" ng-checked="data.userTraceEditable == 0" ng-model="data.userTraceEditable">No
+	        </label>
+       </div>
+       
        <div class="form-group" ng-show="group0">
 	        <label>Upload Document &nbsp;&nbsp;</label>
 	        <label class="radio-inline">
