--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -143,15 +143,11 @@
 	            <input type="radio" name="updateEmptyReminderDate" value="0" ng-checked="data.updateEmptyReminderDate == 0" ng-model="data.updateEmptyReminderDate">No
 	        </label>
        </div>
-       <!-- <div class="form-group">
-	        <label>LPS Active &nbsp;&nbsp;</label>
-	        <label class="radio-inline">
-	            <input type="radio" name="lps" value="1" ng-checked="data.lps == 1" ng-model="data.lps">Yes
-	        </label>
-	        <label class="radio-inline">
-	            <input type="radio" name="lps" value="0" ng-checked="data.lps == 0" ng-model="data.lps">No
-	        </label>
-       </div> -->
+       <div class="form-group">
+	        <label>KrungSri API &nbsp;&nbsp;</label>
+	        <i class="fa fa-pencil-square-o fa-fx" style="cursor: pointer;" ng-click="krsApiSetting()"></i>
+       </div>
+      
 	</div>
 	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 		<div class="panel panel-default">
