--- a/backend/src/main/webapp/app/views/trace_result/main.html
+++ b/backend/src/main/webapp/app/views/trace_result/main.html
@@ -186,7 +186,8 @@
 							<thead>
 								<tr style="background-image: linear-gradient(#C7E2F0, #ebf5fa, #C7E2F0);">
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-									<th style="text-align: center">Hist.</th>
+									<th style="text-align: center; white-space: nowrap;"><i class="fa fa-cloud-upload fa-fw" title="ผลการส่งข้อมูล"></i></th>
+									<!-- <th style="text-align: center">Hist.</th> -->
 									<th style="white-space: nowrap; text-align: center;">
 										<a href="" ng-click="columnOrder('createdDateTime')" style="padding-left: 30px; padding-right: 30px; position: relative;">
 											วันที่ติดตาม&nbsp;
@@ -260,9 +261,10 @@
 									<td style="vertical-align: middle; text-align: center;">
 										{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}
 									</td>
-									<td style="text-align: center">
+									<td style="text-align: center; white-space: nowrap;"><span title="{{ data.uploadStatusDesc }}">{{ data['uploadStatusCode'] }}</span></td>
+									<!-- <td style="text-align: center">
 										<i class="fa fa-list-alt fa-history" style="cursor: pointer;" ng-click="getHis($event.target, $index, data['_id'], $event)"></i>
-									</td>
+									</td> -->
 									<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['createdDateTime'] | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; white-space: nowrap;">{{ data['resultText'] }}</td>
 									
