--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -262,6 +262,7 @@
 		         	<div class="modal-header">
 		                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
 		                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
+		                <span style="color: red;" ng-show="apiRetryMsg"><u>API ERROR</u> : {{ apiRetryMsg }}</span>
 		            </div>
 		            <div class="modal-body">
 						<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
